# gaussian

./: CMakeLists.txt  GaussianMixture.h  README.md  gaussian.cpp  gaussian_online.cpp  main.cpp
include/: GaussianMixture.h
